# railway-dem

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
app/brake_monitor/: brake_monitor.c  brake_monitor.h
app/comms_monitor/: comms_monitor.c  comms_monitor.h
app/diag_app/: dem_tui.c  ecu_kavach_main.c  ecu_main.c  main.c
app/door_lock_monitor/: door_lock_monitor.c  door_lock_monitor.h
app/hvac_monitor/: hvac_monitor.c  hvac_monitor.h
app/motor_controller_monitor/: motor_controller_monitor.c  motor_controller_monitor.h
app/power_monitor/: power_monitor.c  power_monitor.h
app/signal_monitor/: signal_monitor.c  signal_monitor.h
app/temperature_monitor/: temperature_monitor.c  temperature_monitor.h
bsw/can/include/: Can_Udp.h  IsoTp.h
bsw/can/src/: Can_Udp.c  IsoTp.c
bsw/dcm/include/: Dcm.h
bsw/dcm/src/: Dcm.c
bsw/dem/include/: Dem.h  DemLog.h  Dem_Cfg.h  Dem_EventConfig.h  EvtLog.h  Std_Types.h
bsw/dem/src/: Dem.c  DemLog.c  EvtLog.c
bsw/kavach/include/: Kavach_Bridge.h  Kavach_Conditions.h  Kavach_Eth.h
bsw/kavach/src/: Kavach_Bridge.c  Kavach_Conditions.c  Kavach_Eth.c
bsw/nvm/include/: NvM.h
bsw/nvm/src/: NvM.c
scripts/: uds_tester.c
tests/unit/: test_dem.c
ui/: dashboard.py
